@@ -2,6 +2,10 @@
 Next Major Release
 ------------------
 
+- Raise a specific exception,
+  relstorage.adapters.interfaces.UnableToAcquireCommitLockError, when
+  acquiring the commit lock fails.
+
 - MySQL 5.5: The test suite was freezing in checkBackwardTimeTravel. Fixed.
 
 - Added performance metrics using the perfmetrics package.
